<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_administrarEstu"
            android:icon="@drawable/administrator_icon"
            android:title="@string/menu_administrador_estudiantes" />
        <item
            android:id="@+id/nav_administrarProf"
            android:icon="@drawable/administrar_profesor"
            android:title="@string/menu_administrador_profesores" />
        <item
            android:id="@+id/nav_administrarCurso"
            android:icon="@drawable/administrar_curso"
            android:title="@string/menu_administrador_cursos" />
        <item
            android:id="@+id/nav_administrarEspacios"
            android:icon="@drawable/administrar_curso"
            android:title="@string/menu_administrador_salon" />
        <item
            android:id="@+id/nav_estudianteAsisqr"
            android:icon="@drawable/qr_asistencia"
            android:title="@string/menu_estudiantes_asistenciaqr" />
        <item
            android:id="@+id/nav_estudianteUbi"
            android:icon="@drawable/ubicacion_estudiante"
            android:title="@string/menu_estudiantes_ubicacionclase" />
        <item
            android:id="@+id/nav_estudianteConect"
            android:icon="@drawable/stream"
            android:title="@string/menu_estudiantes_conectarweb" />
        <item
            android:id="@+id/nav_estudianteAsis"
            android:icon="@drawable/estudiante_asistencia"
            android:title="@string/menu_estudiantes_asistencias" />
        <item
            android:id="@+id/nav_profesorCurso"
            android:icon="@drawable/administrar_curso"
            android:title="@string/menu_profesores_cursos" />
        <item
            android:id="@+id/nav_profesorStreaming"
            android:icon="@drawable/stream_estudiante"
            android:title="@string/menu_profesores_streaming" />

    </group>
</menu>