<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
    android:id="@+id/nav_home"
    android:name="com.example.proyecto_final.ui.slideshow.encuestaPandemia"
    android:label="@string/menu_encuesta"
    tools:layout="@layout/fragment_encuesta_pandemia" />

    <fragment
        android:id="@+id/nav_administrarEstu"
        android:name="com.example.proyecto_final.ui.home.administradorEstudiantes"
        android:label="@string/menu_administrador_estudiantes"
        tools:layout="@layout/fragment_administrar_estudiantes" />
    <fragment
        android:id="@+id/nav_administrarProf"
        android:name="com.example.proyecto_final.ui.gallery.administradorProfesores"
        android:label="@string/menu_administrador_profesores"
        tools:layout="@layout/fragment_administrar_profesores" />
    <fragment
        android:id="@+id/nav_administrarCurso"
        android:name="com.example.proyecto_final.ui.slideshow.administrarCurso"
        android:label="@string/menu_administrador_cursos"
        tools:layout="@layout/fragment_administrar_curso" />
    <fragment
        android:id="@+id/nav_administrarEspacios"
        android:name="com.example.proyecto_final.ui.gallery.administradorSalones"
        android:label="@string/menu_administrador_salon"
        tools:layout="@layout/fragment_administrar_salones" />
    <fragment
        android:id="@+id/nav_estudianteAsisqr"
        android:name="com.example.proyecto_final.ui.slideshow.estudianteAsisqr"
        android:label="@string/menu_estudiantes_asistenciaqr"
        tools:layout="@layout/fragment_estudiante_asisqr" />
    <fragment
        android:id="@+id/nav_estudianteUbi"
        android:name="com.example.proyecto_final.ui.slideshow.estudianteUbicacionClase"
        android:label="@string/menu_estudiantes_ubicacionclase"
        tools:layout="@layout/fragment_estudiante_ubicacion" />
    <fragment
        android:id="@+id/nav_estudianteConect"
        android:name="com.example.proyecto_final.ui.gallery.estudianteConectarWeb"
        android:label="@string/menu_estudiantes_conectarweb"
        tools:layout="@layout/fragment_estudiante_conectarweb" />
    <fragment
        android:id="@+id/nav_estudianteAsis"
        android:name="com.example.proyecto_final.ui.slideshow.estudianteAsistencia"
        android:label="@string/menu_estudiantes_asistencias"
        tools:layout="@layout/fragment_estudiante_asis" />
    <fragment
        android:id="@+id/nav_profesorCurso"
        android:name="com.example.proyecto_final.ui.home.profesorCursos"
        android:label="@string/menu_profesores_cursos"
        tools:layout="@layout/fragment_profesor_cursos" />
    <fragment
        android:id="@+id/nav_profesorStreaming"
        android:name="com.example.proyecto_final.ui.slideshow.profesorStreaming"
        android:label="@string/menu_profesores_streaming"
        tools:layout="@layout/fragment_profesor_streaming" />

</navigation>